--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "@angular/platform-browser-dynamic": "~12.1.2",
     "@angular/router": "~12.1.2",
     "bootstrap": "^5.1.0",
-    "bootstrap-icons": "^1.5.0",
+    "bootstrap-icons": "^1.9.1",
     "jquery": "^3.6.0",
+    "ngx-page-scroll": "^7.0.6",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
